# lsn-10-2-task1

./: README.md  pyproject.toml
src/: taxes.py
tests/: test_taxes.py
