[project]
name = "lsn-10-2-task1"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexandr Dunets",email = "dunetsa@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
